Color/Score assigned by filter lost on message move
Evo: (3.28.5-5.el7) (CentOS77) with EWS
Using the filter actions "Set Color" then "Move to folder" The local color attribute of the email isn't persistent.
What is the correct action order to set the color and move to a folder? I have tried it both ways and get mixed/non-consistent results. The move action always works, however the set color is mixed. The label action consistently works, but I was trying to avoid unnecessary labels. I watched the CAMEL_DEBUG=filters and didn't notice anything particularly weird. These filters are high on the order list as they are used for mailing-lists.
The set colors do work every time using the "Select All, C-y" method after the move is completed.
I have tried both: 1 set color 2 move to folder 3 quit proc And 1 move to foler 2 set color 3 quit proc
Surely I'm missing something simple here.