I#71 - Color/Score assigned by filter lost on message move

Closes https://gitlab.gnome.org/GNOME/evolution-ews/issues/71